# unomas

./: .gitignore  CMakeLists.txt  README.md  package.xml
ai_model_training/: object.-yamal.py  webcam_detection.py
config/: gazebo_bridge.yaml  nav2_params.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/41068_ignition_bringup/share/41068_ignition_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/41068_ignition_bringup/share/41068_ignition_bringup/cmake/: 41068_ignition_bringupConfig-version.cmake  41068_ignition_bringupConfig.cmake
install/41068_ignition_bringup/share/41068_ignition_bringup/config/: 41068.rviz  gazebo_bridge.yaml  nav2_params.yaml  robot_localization.yaml  slam_params.yaml
install/41068_ignition_bringup/share/41068_ignition_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/41068_ignition_bringup/share/41068_ignition_bringup/launch/: 41068_ignition.launch.py  41068_navigation.launch.py
install/41068_ignition_bringup/share/41068_ignition_bringup/models/forest_plane/: model.config  model.sdf
install/41068_ignition_bringup/share/41068_ignition_bringup/models/forest_wall/: model.config  model.sdf
install/41068_ignition_bringup/share/41068_ignition_bringup/models/grass_plane/: model.config  model.sdf
install/41068_ignition_bringup/share/41068_ignition_bringup/urdf/: common_properties.urdf.xacro  husky.gazebo.xacro  husky.urdf.xacro  wheel.urdf.xacro
install/41068_ignition_bringup/share/41068_ignition_bringup/urdf/meshes/: base_link.dae  bumper.dae  jpl04_arch_nosensor.stl  top_chassis.dae  top_plate.dae  wheel.dae
install/41068_ignition_bringup/share/41068_ignition_bringup/worlds/: large_demo.sdf  simple_trees.sdf
install/41068_ignition_bringup/share/ament_index/resource_index/package_run_dependencies/: 41068_ignition_bringup
install/41068_ignition_bringup/share/ament_index/resource_index/parent_prefix_path/: 41068_ignition_bringup
launch/: unomas_debug.launch.py  unomas_old_run.launch.py  unomas_run.launch.py  unomas_sim.launch.py
log/: latest_build
misc/: MiscModelsSource.blend  MiscModelsSource.blend1
models/: auto_sdf_generator.py  model_origin_fixer.py
models/barrel_crate/: barrel_crate.dae  barrel_crate.dae.bak  model.sdf
models/barrel_crate_horizontal/: barrel_crate.dae  barrel_crate.dae.bak  model.config  model.sdf
models/crop_rows/: model.config  model.sdf
models/farm_barn/: farm_barn.dae  farm_barn.dae.bak  model.config  model.sdf
models/farm_ground/: model.config  model.sdf
models/farm_ground/meshes/: farm_ground_collision.dae  model.config  model.sdf
models/farm_house/: farm_house.dae  farm_house.dae.bak  model.config  model.sdf
models/farm_loft/: farm_loft.dae  farm_loft.dae.bak  model.config  model.sdf
models/forest_wall/: model.sdf
models/grass_plane/: model.sdf
models/muscle_car/: model.config  model.sdf  muscle_car.dae  muscle_car.dae.bak
models/rock1/: model.config  model.sdf  rock1.dae  rock1.dae.bak
models/rock2/: model.config  model.sdf  rock2.dae  rock2.dae.bak
models/shipping_container/: model.config  model.sdf  shipping_container.dae  shipping_container.dae.bak
models/silo/: model.config  model.sdf  silo.dae  silo.dae.bak
models/small_crate/: model.config  model.sdf  small_crate.dae  small_crate.dae.bak
models/tractor_new/: model.config  model.sdf  tractor_new.dae  tractor_new.dae.bak
models/tractor_old/: model.config  model.sdf  tractor_old.dae  tractor_old.dae.bak
models/tractor_tyre/: model.config  model.sdf  tractor_tyre.dae  tractor_tyre.dae.bak
msg/: AddressedPoseArray.msg  FieldPlan.msg  MacroPlan.msg  RoutePlan.msg  SoilInfo.msg  StatusUpdatePacket.msg  StrStr.msg
src/base_station/: base_station_main.cpp  base_station_path.cpp  base_station_path.h  base_station_register.cpp  base_station_register.h  base_station_status.cpp  base_station_status.h  base_station_terrain_soil.cpp  base_station_terrain_soil.h
src/path_planner/: CMakeLists.txt  package.xml  test.py
src/path_planner/src/: path_planer.cpp  path_planer.h
src/robot/: robot_controller.cpp  robot_controller.h  robot_main.cpp  robot_uplink.cpp  robot_uplink.h
src/robot/best/: data.pkl
src/robot/best/.data/: serialization_id
src/robot/best/data/: 0  1  10  100  102  103  104  105  106  108  109  110  111  112  114  115  116  117  118  12  120  121  122  123  124  126  127  128  129  13  130  132  133  134  135  136  138  139  14  140  (+257 more)
src/simulation/: simulation_extra.cpp  simulation_extra.h  simulation_main.cpp
src/ui/app/: README.md  app.py  ros2_bridge.py  run_app.bat  run_app.sh  sim.py
src/ui/app/static/css/: style.css
src/ui/app/static/js/: app.js
src/ui/app/templates/: heatmap.html  home.html  homeMerged.html  homeOriginal.html  index.html  map.html
src/ui/ros/: ui_bridge.cpp  ui_bridge.h  ui_bridge.py  ui_main.cpp
srv/: DebugResponse.srv  DebugTrigger.srv  DummyTrigger.srv  QuerySoil.srv  StatusUpdateService.srv  TerrainSoilData.srv  UpdateMacroPlan.srv
urdf/: fella.gazebo.xacro  fella.gazebo.xacro.OLD  fella.urdf.xacro  husky.gazebo.xacro  husky.urdf.xacro  wheel.urdf.xacro
urdf/meshes/: dummy_body.dae
worlds/: farm_environment_V2.sdf  large_demo.sdf  not_so_simple.sdf  not_so_simple_trees.sdf  simple_trees.sdf
